fix simu enum