@@ -7,6 +7,7 @@ import io.github.cdimascio.dotenv.Dotenv;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
@@ -78,7 +79,7 @@ public class SimulationApp {
             logFilePath = DEFAULT_LOG_FILE;
         }
 
-        Path target = Path.of(logFilePath).toAbsolutePath();
+        Path target = Paths.get(logFilePath).toAbsolutePath();
         try {
             Files.createDirectories(target.getParent());
             FileHandler handler = new FileHandler(target.toString(), 5 * 1024 * 1024, 3, true);
